--- a/itstack-demo-design-4-01/pom.xml
+++ b/itstack-demo-design-4-01/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>itstack-demo-design-4-01</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.itstack</groupId>
+            <artifactId>itstack-demo-design-4-00</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
